<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/bg"
            android:minHeight="?attr/actionBarSize">

            <NumberPicker
                android:id="@+id/numberPicker"
                android:theme="@style/AppTheme.Picker"
                android:layout_width="50dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/numberPicker"
                android:text="@string/tempo"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:gravity="center"
                app:srcCompat="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/keyPicker"
                android:text="@string/key"
                android:textColor="@color/white" />

            <NumberPicker
                android:id="@+id/keyPicker"
                android:theme="@style/AppTheme.Picker"
                android:layout_width="50dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/tablayout">

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray2">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/bg"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:padding="5dp"
                            android:layout_marginTop="1dp"
                            app:srcCompat="@drawable/ic_drum_icon" />

                        <ImageView
                            android:id="@+id/drumdaw"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="false"
                            android:paddingBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_drumdaw" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:background="@color/gray1">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/bg"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:padding="6dp"
                            app:srcCompat="@drawable/ic_piano_icon" />

                        <Button
                            android:id="@+id/chord1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="1"
                            android:backgroundTint="@color/colorAccentFaded"
                            android:textColor="@color/white"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/chord2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="2"
                            android:backgroundTint="@color/colorAccentFaded"
                            android:textColor="@color/white"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/chord3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="3"
                            android:backgroundTint="@color/colorAccentFaded"
                            android:textColor="@color/white"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/chord4"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="4"
                            android:backgroundTint="@color/colorAccentFaded"
                            android:textColor="@color/white"
                            android:layout_weight="1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:background="@color/gray2">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/bg"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:padding="5dp"
                            app:srcCompat="@drawable/ic_bass_icon" />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:gravity="right|center_vertical"
                            android:text="@string/funk" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:background="@color/gray1">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@color/bg"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_mic_black_24dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:background="@color/gray2">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:background="@color/bg"
                            android:scaleType="fitStart"
                            android:padding="3dp"
                            app:srcCompat="@drawable/ic_edit_black_24dp" />

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ems="10"
                            android:inputType="textMultiLine" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </FrameLayout>

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:id="@+id/tablayout">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tuner" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_daw" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tabs" />
        </android.support.design.widget.TabLayout>

    </RelativeLayout>

</RelativeLayout>
